# Tutorial-Vulkan_SDL3_ImGui

./: CMakeLists.txt  README.md  copy-dlls.ps1  setup.ps1  setup_linux.sh  setup_macos.sh
.github/workflows/: build.yml
Part_03_minimal_triangle/: main.cpp
Part_04_imgui/: CMakeLists.txt  README.md  compile_shaders.sh  main.cpp  vert.spv
Part_04_triangle_SDL3/: CMakeLists.txt  main.cpp
Part_04_triangle_SDL3/shaders/: shader.vert
Part_05_vertex_buffer/: CMakeLists.txt  README.md  main.cpp
Part_06_index_buffer/: CMakeLists.txt  README.md  main.cpp
Part_07_uniform_buffer/: CMakeLists.txt  README.md  main.cpp  vert.spv
Part_08_glm/: CMakeLists.txt  README.md  frag.spv  main.cpp
Part_08_glm/shaders/: shader.frag  shader.vert
Part_09_tetrahedron/: CMakeLists.txt  README.md  main.cpp
Part_09_tetrahedron/shaders/: shader.vert
Part_10_texture_stb_image/: CMakeLists.txt  README.md  main.cpp
Part_11_depth_buffer/: CMakeLists.txt  README.md  main.cpp
Part_11_depth_buffer/shaders/: shader.frag
Part_12_overlay_quad/: CMakeLists.txt  README.md  main.cpp
Part_12_overlay_quad/shaders/: shader.vert
Part_13_blinn_phong/: CMakeLists.txt  README.md  main.cpp
Part_14_assimp_mesh_loading/: CMakeLists.txt  main.cpp
Part_15_XZRenderer_refactor/: CMakeLists.txt  XZRenderer.cpp  XZRenderer.hpp  XZRendererDocs.html  main.cpp
